# logic2-automation

./: .buildinfo  .gitignore  LICENSE  README.md  automation.html  errors.html  genindex.html  getting_started.html  index.html  launching_logic2.html  objects.inv  search.html  searchindex.js
.github/workflows/: build-wheel.yml  build.yml
_downloads/3a6389974664c88edfbd009a9eaac439/: logic2_automation-1.0.0-py3-none-any.whl
_downloads/b7b928f05540d9a162879817c2b89ea3/: logic2_automation-0.0.1-py3-none-any.whl
_sources/: getting_started.rst.txt  launching_logic2.rst.txt
_static/: logic2_automation-0.0.1-py3-none-any.whl  logic2_automation-0.9.0-py3-none-any.whl  logic2_automation-1.0.1-py3-none-any.whl  logic2_automation-1.0.2-py3-none-any.whl  saleae_example.py
cpp/: .clang-tidy  CMakeLists.txt  vcpkg.json
cpp/include/saleae/automation/: capture.hpp  errors.hpp  manager.hpp  models.hpp
cpp/include/saleae/automation/private/: grpc_adapters.hpp  utils.hpp
cpp/src/: main.cpp
cpp/src/saleae/automation/: capture.cpp  manager.cpp
cpp/tests/: CMakeLists.txt  test_connection.cpp  test_devices.cpp  test_saleae_automation.cpp
docs/: .buildinfo  automation.html  errors.html  genindex.html  getting_started.html  index.html  launching_logic2.html  objects.inv  search.html  searchindex.js
docs/_sources/: automation.rst.txt  getting_started.rst.txt  launching_logic2.rst.txt
docs/_static/: saleae_example.py
doctrees/: automation.doctree  environment.pickle  errors.doctree  getting_started.doctree  index.doctree  launching_logic2.doctree
go/: README.md  go.mod  logic2automation.go  saleae.pb.go  saleae_grpc.pb.go
html/: automation.html  getting_started.html  index.html
html/_downloads/b7b928f05540d9a162879817c2b89ea3/: logic2_automation-0.0.1-py3-none-any.whl
html/_static/: saleae_example.py
proto/saleae/grpc/: CHANGELOG.md  saleae.proto
python/: .gitignore  BUILD.md  README.md  automation.py  automation_server.py  build.sh  grpc_build_hook.py  pyproject.toml  pytest.ini  requirements.txt
python/docs/: README.md  requirements.txt
python/docs/source/: automation.rst  conf.py  errors.rst  getting_started.rst  index.rst  launching_logic2.rst
python/docs/source/_static/: logic2_automation-0.0.1-py3-none-any.whl  saleae_example.py
python/saleae/: __init__.py  automation.py
python/saleae/automation/: __init__.py  capture.py  errors.py  manager.py
python/saleae/grpc/: saleae_pb2.py  saleae_pb2.pyi  saleae_pb2_grpc.py
python/tests/: analyzer_test.py  conftest.py  export_analyzer_legacy_test.py  export_data_table_test.py  export_raw_data_test.py  export_test.py  get_devices_test.py  grpc_error_test.py  hla_test.py  load_save_test.py  save_test.py  start_capture_test.py  utils.py
python/tests/assets/: cap1.sal  cap2.sal  cap3.sal  cap4.sal  large_async_capture.sal  small_spi_capture.sal
python/tests/assets/cap1/: swd.csv  swd_start_only.csv  swd_type_and_value.csv
python/tests/assets/cap1/all/: digital.csv
python/tests/assets/cap1/all_isotimestamps/: digital.csv
python/tests/assets/cap1/analog_1_downsample4/: analog.csv
python/tests/assets/hla/: data_table_case1.csv
python/tests/assets/hla/test/: extension.json  test_hla.py
python/tests/assets/large_async_capture/: 2_analyzers.csv  search_ascii_0x36.csv  search_ascii_7.csv  search_hex_0x36.csv
python/tests/assets/small_spi_capture/: data_table_case1.csv  data_table_case2.csv  data_table_multiple.csv
