[project]
name = "logic2-automation"
version = "1.0.1"
authors = [
    { name="Saleae, Inc.", email="support@saleae.com" },
]
description = "Library for using the Saleae Logic 2 Automation API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
   "Programming Language :: Python :: 3",
]
dependencies = [
    "grpcio>=1.13.0",
    "grpcio-tools>=1.13.0",
]

[project.urls]
"Homepage" = "https://github.com/saleae/logic2-automation"
"Bug Tracker" = "https://github.com/saleae/logic2-automation/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "/saleae/",
]

