[project]
name = "logic2-automation"
version = "1.0.6"
authors = [
    { name="Saleae, Inc.", email="support@saleae.com" },
]
description = "Library for using the Saleae Logic 2 Automation API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
   "Programming Language :: Python :: 3",
]
dependencies = [
    "grpcio>=1.13.0",
    "protobuf>=3.5.0.post1",
    "pywin32; platform_system == 'Windows'"
]

[project.urls]
"Homepage" = "https://github.com/saleae/logic2-automation"
"Bug Tracker" = "https://github.com/saleae/logic2-automation/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default.scripts]
protobufs = "python ./grpc_build_hook.py"

# Source distributions include a script to build the gRPC/protobuf files using protoc
[tool.hatch.build.targets.sdist]
include = [
    "grpc_build_hook.py",
    "/saleae/automation",
]

[tool.hatch.build.targets.wheel]
include = [
    "/saleae/automation",
    "/saleae/grpc",
]

[tool.hatch.build.force-include]
"../proto/saleae/grpc/saleae.proto" = "proto/saleae/grpc/saleae.proto"

# The gRPC/protobuf files are only generated when building a wheel
[tool.hatch.build.targets.wheel.hooks.custom]
require-runtime-dependencies = true
path = "grpc_build_hook.py"
dependencies = [
    "grpcio-tools>=1.13.0",
]

